# FL-Iroh

./: .gitignore  LICENSE  README.md  _check_env.py  check_provinces.py  docker-compose.nat1.yml  docker-compose.nat2.yml  docker-compose.yml  fix_e1_merge.py  fix_e3_summary.py  pyproject.toml  seeds.yaml  test_out.txt
.claude/: settings.local.json
attic/: README.md  _e3_compile.sh  _iroh_conntype_timing.sh  _iroh_remoteinfo_probe.sh  fix_e1_merge.py  test_subclass.py
docker/: Dockerfile.base  Dockerfile.client  Dockerfile.gateway  Dockerfile.server
experiments/: __init__.py  _replication.py  e1_microbenchmark.py  e2_centralized_fl.py  e3_nat_traversal.py  e5_churn.py  e6_coap_overhead.py  e7_air_quality_fl.py  e8_flower_tailscale.py
fl_coap_iroh/: __init__.py  cli.py  types.py
fl_coap_iroh/coap/: __init__.py  client.py  resources.py  server.py
fl_coap_iroh/data/: __init__.py  partition.py
fl_coap_iroh/fl/: __init__.py  client.py  fedavg.py  fedgam.py  server.py
fl_coap_iroh/metrics/: __init__.py  collector.py
fl_coap_iroh/models/: __init__.py  agri_mlp.py  air_lstm.py  air_mlp.py  cnn.py  mlp.py  prophet_wrapper.py
fl_coap_iroh/transport/: __init__.py  iroh_node.py
paper/: paper.tex  paper_es.tex
results/: server_endpoint.json
results/e1/: e1_dist_server.csv  e1_microbenchmark.csv  e1_microbenchmark.ok  e1_summary.csv  server_endpoint.json
results/e2/: e2_crop_iid.ok  (+12 more)
scenarios/: net_cgnat.yaml  net_churn30.yaml  net_fw443.yaml  net_lan.yaml  net_lat50.yaml  net_loss5.yaml  net_nat1.yaml  net_nat2.yaml
scripts/: _e3_check.sh  _e3_check2.sh  _e3_client.sh  _e3_server.sh  _grep_out.sh  _iroh_api_probe.sh  _iroh_conntype_timing2.sh  _iroh_conntype_timing3.sh  aggregate_ci.py  apply_netem.sh  churn_simulator.py  collect_metrics.py  e3_repeat_establish.sh  e3_server.ps1  e6_trivial_baselines.py  energy_estimate.py
slurm/: collect_results.py  run_centralized_baselines.sh  run_e4_churn_seeds.sh  run_experiments.sh  run_flower_ci.sh  run_flower_sim.sh  setup_env.sh  submit.sh
(+338 files in other folders)
